# Structura

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _linked_list_8hpp_source.html  _r_e_a_d_m_e_8md.html  _stack_8hpp.html  _stack_8hpp_source.html  _stack_8inl.html  _stack_8inl_source.html  annotated.html  annotated_dup.js  class_st_1_1_linked_list-members.html  class_st_1_1_linked_list.html  class_st_1_1_linked_list.js  class_st_1_1_stack-members.html  class_st_1_1_stack.html  class_st_1_1_stack.js  class_structura_1_1_stack-members.html  class_structura_1_1_stack.html  classes.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_239d5a4c264918f70d49ccd27b568fc9.html  dir_239d5a4c264918f70d49ccd27b568fc9.js  dir_43849c066a5c69725f980aa65a69725f.html  dir_43849c066a5c69725f980aa65a69725f.js  dir_64d4fc0d60a5f28fbc9980008a4192b9.html  dir_64d4fc0d60a5f28fbc9980008a4192b9.js  dummy_8cpp.html  dummy_8cpp_source.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  index.html  menudata.js  namespace_structura.html  (+3 more)
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Codacy.yml  Documentation.yml  Linux.yml  MacOS.yml  Windows.yml  ci.yml
cmake/: flags.cmake
docs/: Doxyfile.in
includes/DataTypes/: Stack.hpp  Stack.inl
includes/Datatypes/: Stack.hpp
includes/Lists/: LinkedList.hpp  LinkedList.inl
scripts/: build_osx.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  pages_0.js  searchdata.js
src/Core/: Addition.cpp  Addition.hpp
src/Utils/: Multiplication.cpp  Multiplication.hpp
tests/Core/: Addition.cpp
tests/DataTypes/: Stack.cpp
tests/Datatypes/: Stack.cpp
tests/Lists/: LinkedList.cpp
tests/Utils/: Multiplication.cpp
